<resources>
    <string name="app_name">Soom</string>
    <string name="splashscreentext">Splash Screen</string>
    <string name="code">+91</string>
    <string name="mob">Mobile Number</string>
    <string name="password">Password</string>
    <string name="createaccnt">Create a new account</string>
    <string name="gestusr">Guest User</string>
    <string name="forgtpsswrd">Forgot Password?</string>
    <string name="title_activity_registration"> </string>
    <string name="serviceprovider">Service Provider</string>
    <string name="sekr">Service Seeker</string>
    <string name="title_activity_registration_fill">Account Details</string>
    <string name="login">Login</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="cpassword">Confirm Password</string>
    <string name="title_activity_verification_activty"> </string>
    <string name="verstring">verification code has been send to your email</string>
    <string name="vercode">Verification Code</string>
    <string name="name_empty">Invalid Field - First Name</string>
    <string name="lname_empty">Invalid Field - Last Name</string>
    <string name="code_empty">Empty Field - Country Code</string>
    <string name="code_long">Country Code Exceeds Limit</string>
    <string name="mobnum_empty">Empty Field - Mobile Number</string>
    <string name="mob_length">Mobile Number Should be atleast 6 numbers</string>
    <string name="mob_lengthy">Mobile Number should not exceed the limit of 13</string>
    <string name="invalidmobil">Invalid Mobile Number</string>
    <string name="emil_empty">Empty Field - Email</string>
    <string name="email_invalid">Invalid Email</string>
    <string name="password_impty">Empty Field - Password</string>
    <string name="passwordlenght">Password should have atleast 6 characters</string>
    <string name="passwordlenghy">Password should not have more than 15 characters</string>
    <string name="mismatch">Passwords Mismatch</string>
    <string name="reg_failed">Registration Failed</string>
    <string name="reg_success">Registration Success</string>
    <string name="vercode_empty">Empty Field - Verification Code</string>
    <string name="ver_failed">Verification Failed</string>
    <string name="for_failed">Failed</string>
    <string name="for_success">Password sent to your Mail</string>
    <string name="title_activity_home"> </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="failed_connect">Failed to Connect</string>
    <string name="loading_message">please wait...</string>
    <string name="log_failed">Login Failed</string>
    <string name="title_activity_registration_pvr"> Primary Information</string>
    <string name="gender">*Gender</string>
    <string name="dob">*Date of Birth</string>
    <string name="address">Address</string>
    <string name="education">*Education</string>
    <string name="designation">*Designation</string>
    <string name="experiance">*Experience (Yrs)</string>
    <string name="hourlywages">*Hourly Wages (Rs)</string>
    <string name="languagesknwn">*Languages Known</string>
    <string name="emptype">*Employment Type</string>
    <string name="title_activity_registration_pvrdetailes">Secondary Information</string>
    <string name="state">Choose State</string>
    <string name="country">Choose Country</string>
    <string name="choselocation2">Choose Location 2 (optional)</string>
    <string name="chooselocation1">Choose Location 1 (optional)</string>
    <string name="choselocation">Choose Location</string>
    <string name="curloc">Current Location</string>
    <string name="choservice">Choose Service</string>
    <string name="title_activity_maps">Map</string>
    <string name="gender_empty">Please specify your gender</string>
    <string name="dob_empty">Please specify your Date of Birth</string>
    <string name="edu_empty">Please specify your Education</string>
    <string name="desi_empty">Please sepcify your designation</string>
    <string name="exp_empty">Please sepcify your experience</string>
    <string name="hr_empty">Please specify your hourly wages</string>
    <string name="lanf_empty">Please specify the lanuages known</string>
    <string name="nofiltr">No Filter Selected</string>
    <string name="searchtext">What is your Service?</string>
    <string name="loginback">Back to Login?</string>
    <string name="city">Choose City</string>
    <string name="service_empty">Please Choose a Service</string>
    <string name="subservice_empty">Please Choose a Specialization</string>
    <string name="location_empty">Please Choose a Location</string>
    <string name="country_empty">Please Choose a Country</string>
    <string name="state_empty">Please Choose a State</string>
    <string name="city_empty">Please Choose a City</string>
    <string name="rembr">Remember Me</string>
    <string name="emp_empty">Employment Type Required</string>
    <string name="title_activity_provider_details"> </string>
    <string name="invitesend">Send Invite</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="dob_noteighteen">Provider Should be atleast 18 Years old.</string>
    <string name="invalid_selection">Invalid Selection</string>
    <string name="no_providers">No Providers in this Region</string>
    <string name="location_empty_gps">Please turn on your Location</string>
    <string name="profdetails">Profile Details</string>
    <string name="title_activity_filter">Filter By</string>
    <string name="skills">Additional Skills</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_profile">Profile</string>
    <string name="basicdet">Basic Details</string>
    <string name="title_activity_change_pasword">Change Password</string>
    <string name="title_activity_more">More Details</string>
    <string name="title_activity_howitworks">How it Works?</string>
    <string name="howitworks" />
    <string name="title_activity_super">SuperActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_home"></string>
    <string name="termsncoditn">I agree the Soom <a href="http://www.cleverfinger.com.au/user-guide/">Terms of service </a> &amp; <a href="http://www.cleverfinger.com.au/user-guide/">Privacy Policy</a>.</string>
    <string name="title_activity_personal_details">Personal Details</string>
    <string name="zip">Postal Code</string>
    <string name="title_activity_professional_details">Professional Details</string>
    <string name="services">Services</string>
    <string name="wages">*Wages</string>
    <string name="submit">Submit</string>
    <string name="experiance_empty">Please specify your Experiance</string>
    <string name="wages_empty">Please specify your Wages</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="languagesknwns">Languages Known</string>
    <string name="location">Location</string>
    <string name="proferror">Add at least 1 Service and Location</string>
    <string name="location_add_success">Location Added Succesfully</string>
    <string name="location_add_failed">Location Add Fialed</string>
    <string name="service_add_success">Service Added Successfully</string>
    <string name="service_exist">Service Already Exist</string>
    <string name="serviceare">Service Area</string>
    <string name="aboutme">About Me</string>
    <string name="invalidabout">Write something about yourself!</string>
    <string name="zip_empty">Zip Empty!</string>


</resources>
