<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bridge.soom.Activity.RegistrationPVRDetailesActivity"
    tools:showIn="@layout/activity_registration_pvrdetailes">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <RelativeLayout
        android:id="@+id/servicex"
        android:background="@drawable/round_edit_text"
        android:layout_width="0dp"
        android:focusable="false"
        android:layout_margin="@dimen/fab_margin"
        android:textColorHint="@color/hintColor"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textsize"
        android:paddingStart="@dimen/marginmid"
        android:paddingEnd="@dimen/marginmid"
        android:layout_height="36dp"
        android:hint="@string/choservice"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp" >
        <Spinner
            android:id="@+id/service"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonsize"/>
        </RelativeLayout>


        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/subservicex"
            android:background="@drawable/round_edit_text"
            android:layout_width="0dp"
            android:focusable="false"
            android:layout_margin="@dimen/fab_margin"
            android:layout_height="36dp"
            android:textColorHint="@color/hintColor"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textsize"
            android:paddingStart="@dimen/marginmid"
            android:paddingEnd="@dimen/marginmid"
            android:hint="@string/nofiltr"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/servicex">
            <Spinner
                android:id="@+id/subservice"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonsize"/>

        </RelativeLayout>



    <AutoCompleteTextView
        android:id="@+id/choselocation"
        android:background="@drawable/round_edit_text"
        android:layout_width="0dp"
        android:layout_margin="@dimen/fab_margin"
        android:layout_height="36dp"
        android:hint="@string/choselocation"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hintColor"
        android:textSize="@dimen/textsize"
        android:paddingStart="@dimen/marginmid"
        android:paddingEnd="@dimen/marginmid"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/subservicex" />



    <AutoCompleteTextView
        android:id="@+id/choselocation1"
        android:background="@drawable/round_edit_text"
        android:layout_width="0dp"
        android:layout_margin="@dimen/fab_margin"
        android:layout_height="36dp"
        android:hint="@string/chooselocation1"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hintColor"
        android:textSize="@dimen/textsize"
        android:paddingStart="@dimen/marginmid"
        android:paddingEnd="@dimen/marginmid"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/choselocation" />

    <AutoCompleteTextView
        android:id="@+id/choselocation2"
        android:background="@drawable/round_edit_text"
        android:layout_width="0dp"
        android:layout_margin="@dimen/fab_margin"
        android:layout_height="36dp"
        android:hint="@string/choselocation2"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hintColor"
        android:textSize="@dimen/textsize"
        android:paddingStart="@dimen/marginmid"
        android:paddingEnd="@dimen/marginmid"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/choselocation1" />

    <EditText
        android:id="@+id/chosecountry"
        android:background="@drawable/round_edit_text"
        android:layout_width="0dp"
        android:layout_margin="@dimen/fab_margin"
        android:layout_height="36dp"
        android:hint="@string/country"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hintColor"
        android:textSize="@dimen/textsize"
        android:paddingStart="@dimen/marginmid"
        android:focusable="false"

        android:paddingEnd="@dimen/marginmid"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/choselocation2" />

    <RelativeLayout
        android:id="@+id/choosestate"
        android:background="@drawable/round_edit_text"
        android:layout_width="0dp"
        android:layout_margin="@dimen/fab_margin"
        android:layout_height="36dp"
        android:hint="@string/state"
        android:textColor="@android:color/white"
        android:textColorHint="@color/hintColor"
        android:textSize="@dimen/textsize"
        android:paddingStart="@dimen/marginmid"
        android:paddingEnd="@dimen/marginmid"
        android:layout_marginRight="8dp"
        android:focusable="false"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/chosecountry" >
        <Spinner
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonsize"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/choosecity"
            android:background="@drawable/round_edit_text"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_margin="@dimen/fab_margin"
            android:layout_height="36dp"
            android:hint="@string/city"
            android:textColor="@android:color/white"
            android:textColorHint="@color/hintColor"
            android:textSize="@dimen/textsize"
            android:paddingStart="@dimen/marginmid"
            android:paddingEnd="@dimen/marginmid"
            android:layout_marginRight="8dp"
            android:focusable="false"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/choosestate" >
            <Spinner
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonsize"/>
        </RelativeLayout>


    <ImageButton
        android:id="@+id/fab"
        android:layout_gravity="center"
        android:padding="@dimen/marginmidig"
        android:scaleType="fitCenter"
        android:clickable="true"
        android:src="@drawable/right_arrow"
        android:background="@drawable/round_button"
        android:layout_width="@dimen/buttonsize"
        android:layout_height="@dimen/buttonsize"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@+id/choosecity"
        app:layout_constraintVertical_bias="0.507" />

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar"
            app:civ_border_width="2dp"
            app:civ_border_color="@android:color/white"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" />

</android.support.constraint.ConstraintLayout>
</ScrollView>
    </RelativeLayout>